# docquery-ai

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_users.py  0002_create_documents.py  0003_create_chunks.py  0004_create_qa_tables.py  0005_create_review_and_audit.py
backend/app/: main.py
backend/app/audit/: models.py  router.py  schemas.py  service.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/core/: config.py  db.py  errors.py  logging.py  schemas.py  security.py
backend/app/documents/: models.py  router.py  schemas.py  service.py
backend/app/ingestion/: chunking.py  models.py  parsers.py  service.py
backend/app/llm/: anthropic_provider.py  base.py  factory.py  fake_provider.py  http.py  openai_provider.py  pricing.py
backend/app/qa/: citations.py  models.py  prompts.py  retrieval.py  router.py  rules.py  schemas.py  service.py
backend/app/review/: models.py  router.py  schemas.py  service.py  transitions.py
backend/app/usage/: router.py  schemas.py  service.py
backend/app/users/: router.py  schemas.py  service.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_admin_users.py  test_audit_api.py  test_auth.py  test_chunking.py  test_citations.py  test_documents.py  test_errors.py  test_fake_provider.py  test_health.py  test_ingestion.py  test_llm_retry.py  test_pricing.py  test_qa.py  test_rbac.py  test_review.py  test_seed.py  test_transitions.py  test_usage.py
docs/: REQUIREMENTS.md  api.md  architecture.md
frontend/: Dockerfile  jest.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/scripts/: capture-screenshots.mjs
frontend/src/__tests__/: apiClient.test.ts  chatWindow.test.tsx  citationCard.test.tsx  documentTable.test.tsx  documentUploader.test.tsx  documentsPage.test.tsx  loginForm.test.tsx  page.test.tsx  reviewDecisionForm.test.tsx  roleGuard.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ComingSoon.tsx  EmptyState.tsx  ErrorBoundary.tsx  RoleGuard.tsx  SkeletonLoader.tsx
frontend/src/hooks/: useAdmin.ts  useAudit.ts  useConversations.ts  useDocuments.ts  useReview.ts
frontend/src/lib/: format.ts  (+2 more)
(+33 files in other folders)
