[project]
name = "docquery-backend"
version = "0.1.0"
description = "DocQuery AI backend — FastAPI RAG document Q&A and review service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=25.1",
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Exception names (ValidationFailed, InvalidTransition, QuotaExceeded) are
# fixed by the API contract in docs/REQUIREMENTS.md §9.
"app/core/errors.py" = ["N818"]

[tool.mypy]
strict = true
python_version = "3.12"
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
